Fix remember me checkbox alignment

--- a/application/static/styles/public/css/styles.css
+++ b/application/static/styles/public/css/styles.css
@@ -397,10 +397,10 @@ footer2 {
     margin: 1rem 0 0.5rem 0;
 }
 
-.tradable-check .form-check {
+/* .tradable-check .form-check {
     display: inline;
     margin: 0.5rem;
-}
+} */
 
 .item-posting-btn {
     width: 100%;
@@ -428,6 +428,7 @@ input[type=checkbox] {
 
 .rmr-me-check {
     text-align: center;
+    display: absolute;
 }
 
 .login-btn {
@@ -796,9 +797,9 @@ input:checked+.slider:before {
     text-align: center;
 }
 
-.form-check-input {
+/* .form-check-input {
     margin-left: 1.5rem;
-}
+} */
 
 
 /* Style the submit button */
